# MPC-Driving

./: .clang-format  .gitignore  DockerDev  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: build-docker.yaml  mpc_driving.yaml
MPCDriving/: CMakeLists.txt
MPCDriving/cmake/: mpc_driving_config.cmake.in  mpc_driving_install.cmake
MPCDriving/example/: CMakeLists.txt
MPCDriving/include/mpc/: MPC.hpp  Optimizer.hpp  utils.hpp
MPCDriving/include/mpc-driving/math/: CubicSpline.hpp  CubicSpline2D.hpp  spline.hpp
MPCDriving/include/mpc/math/: CubicSpline2D.hpp
MPCDriving/include/mpc/model/: DynamicModel.hpp  State.hpp  SystemModel.hpp
MPCDriving/include/mpc_driving/: MPC.hpp  Optimizer.hpp
MPCDriving/include/mpc_driving/math/: CubicSpline2D.hpp
MPCDriving/include/mpc_driving/model/: State.hpp  SystemModel.hpp
MPCDriving/src/: CubicSpline.cpp  CubicSpline2D.cpp  MPC.cpp  Optimizer.cpp  Utils.cpp  spline.cpp  utils.cpp
MPCDriving/src/math/: CubicSpline.cpp  CubicSpline2D.cpp
MPCDriving/src/model/: DynamicModel.cpp  State.cpp  SystemModel.cpp
MPCDriving/test/: spline_test.cpp
examples/: CMakeLists.txt
examples/ipopt/: CMakeLists.txt  ipopt_example.cpp
examples/mpc/: CMakeLists.txt  mpc_example.cpp
examples/spline/: CMakeLists.txt  spline_example.cpp
